--- a/test.ipynb
+++ b/test.ipynb
@@ -195,90 +195,60 @@
    },
    "outputs": [],
    "source": [
-    "# 通过获取－层神经网络边上的权茧，\n",
+    "# 通过集合计算一个5层神经网络带L2正则化的损失函数  \n",
     "\n",
-    "并将这个权重的 L2 正则化损失加入名称为 ’ losses ’的集合中\n",
+    "# 获取－层神经网络边上的权重 并将这个权重的 L2 正则化损失加入名称为 ’ losses ’的集合中\n",
     "\n",
-    "def get\n",
+    "def get_weight (shape, lambda):\n",
+    "    # 生成一个变量。\n",
+    "    var = tf.Variable(tf.random.normal(shape), dtype = tf.float32)\n",
+    "    # add to collection 函数将这个新生成变量的 L2 正则化损失项加入集合。 \n",
+    "    # 这个函数的第一个参数 ’ losses ’ 是集合的名字， 第二个参数是要加入这个集合的内容。 \n",
+    "    tf.add_to_collection('losses', tf.contrib.layers.l2_regularizer(lambda)(var))\n",
+    "    # 返回生成的变量。\n",
+    "    return var\n",
     "\n",
-    "we 工 ght (shape,\n",
+    "x = tf.placeholder(tf.float32, shape=(None,2))\n",
+    "y_ = tf.placeholder(tf.float32, shape=(None,1))\n",
+    "batch_size = 8\n",
+    "# 定义了每一层网络中节点的个数 。 \n",
+    "layer_dimension = [2 , 10 , 10 , 10 , 1] \n",
+    "# 神经网络的层数。 \n",
+    "n_layers = len(layer_dimension)\n",
     "\n",
-    "lambda) :\n",
+    "# 这个变量维护前向传播时最深层的节点， 开始的时候就是输入层。\n",
     "\n",
-    "＃生成一个变量。\n",
+    "cur_layer = x \n",
     "\n",
-    "var =\n",
+    "# 当前层的节点个数。 \n",
+    "in_dimension = layer_dimension[0]\n",
     "\n",
-    "tf.Variable(tf . random」normal(shape)\n",
+    "# 通过一个循环来生成5层全连接的冲经网络结构。\n",
     "\n",
-    ",\n",
+    "for i in range(1, n_layers):\n",
+    "    # layer dimension[i ）为下一层的节点个数。 \n",
+    "    out_dimension = layer_dimension[i] \n",
+    "    #生成当前层中权重的变量， 并将这个变量的L2正则化损失加入计算图上的集合。 \n",
+    "    weight= get_weight([in_dimension, out_dimension], 0.001)\n",
+    "    bias = tf.Variable(tf.constant(O.l, shape=[out_dimension]))\n",
     "\n",
-    "dtype = tf . float32)\n",
+    "    # 使用 ReLU 激活函数。\n",
+    "    cur_layer= tf.nn.relu(tf.matmul(cur_layer, weight) + bias)\n",
+    "    #进入下一层之前将下一层的节点 个数更新为当前层节点个数。 \n",
+    "    in_dimension = layer_dimension[i]\n",
     "\n",
+    "# 在定义神经网络前向传播的同时 已经将所有的 L2 正则化损失加入了图上的集合\n",
+    "# 这里只需要计算刻画模型在训练 数据上表现的损失函数。\n",
     "\n",
-    "# add to collect 工。 n 函数将这个新生成变量的 L2 正则化损失项加入集合。 ＃这个函数的第一个参数 ’ losses ’ 是集合的名字， 第二个参数是要加入这个集合的内 容。 tf.add to collection( ’ losses ’, tf. contrib . layers .12_regularizer (lambda) (var)) ＃返回生成的变量。\n",
+    "mse_loss= tf.reduce_mean(tf.square(y_ - cur_layer))\n",
     "\n",
-    "retur口\n",
+    "#将均方误差损失函数加入损失集合。\n",
+    "tf.add_to_collection ('losses', mse_loss)\n",
     "\n",
-    "var\n",
+    "# get_collection 返回一个列表 ，这个列表是所有这个集合中的元素 。\n",
+    "# 在这个样例中, 这些元素就是损失函数的不同部 分， 将它们加起来就可以得到最终的损 失函数。\n",
     "\n",
-    "x = tf.placeholder(tf .float32 , y = tf.placeholder(tf . float32 , batch size = 8 ＃定义了每一层网络中节点的个数 。 layer_dimension = [2 , 10 , 10 , 10 , ＃神经网络的层数。 口 layers = len(layer dimension)\n",
-    "\n",
-    "shape=(None, shape=(None ,\n",
-    "\n",
-    "2))\n",
-    "\n",
-    "1))\n",
-    "\n",
-    "1)\n",
-    "\n",
-    "＃这个变量维护前向传播时最深层\n",
-    "\n",
-    "的节点， 开始的时候就是输入层。\n",
-    "\n",
-    "cur layer = x ＃当前层的节点个数。 in dimension = layer dimension[OJ\n",
-    "\n",
-    "＃通过一个循环来生成\n",
-    "\n",
-    "5 层全连接的冲经网络结构。\n",
-    "\n",
-    "for\n",
-    "\n",
-    "i\n",
-    "\n",
-    "in range(l , n layers):\n",
-    "\n",
-    "# layer dimension[i ）为下一层的节点个数。 out_dimension = layer_dimension[i) ＃生成当前层中权重的变量， 并将这个变量的 L2 正则化损失J1n入计算图上的:f.1.1合。 weight= get_weight([in_dimension , out_dimension) , 0.001) bias = tf . Var 工 able(tf.constant(O.l , shape=[out_dimension)))\n",
-    "\n",
-    "＃使用 Re LU 激活函数。\n",
-    "\n",
-    "cur layer= tf.nn . relu(tf.matmul(cur layer, weight)+ ＃进入下一层之前将下一层的节点 个数更新为当前层节点个数。 in dimension = layer dimension[i)\n",
-    "\n",
-    "b 工 as)\n",
-    "\n",
-    "＃在定义神经网络前向传播的同时 已经将所有的 L2 正则化损失加入了图上的集合， ＃这里只需要计算刻画模型在训练 数据上表现的损失函数。\n",
-    "\n",
-    "mse\n",
-    "\n",
-    "loss= tf.reduce mean(tf . square(y\n",
-    "\n",
-    "- cur layer))\n",
-    "\n",
-    "＃将均方误差损失函数加入损失集\n",
-    "\n",
-    "合。\n",
-    "\n",
-    "tf . add to\n",
-    "\n",
-    "collection (’ losses ’,\n",
-    "\n",
-    "mse loss)\n",
-    "\n",
-    "get_collectio口返回一个列表 ，这个列表是所有这个集合中的元素 。在这个样例 1t1, ＃这些元素就是损失函数的不同部 分， 将它们加起来就可以得到最终的损 失函数。\n",
-    "\n",
-    "#\n",
-    "\n",
-    "loss = tf.add n(tf .get collection (’ losses ’ ))"
+    "loss = tf.add_n(tf.get_collection('losses'))\n"
    ]
   }
  ],
@@ -299,6 +269,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.13"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
