--- a/ExponentiaMovingAverage.ipynb
+++ b/ExponentiaMovingAverage.ipynb
@@ -2,36 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0, 0.0]\n",
+      "5.0\n",
+      "[5.0, 4.5]\n",
+      "[0.0, 4.555]\n",
+      "[10.0, 4.60945]\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "\n",
     "# 定义一个变量用于计算滑动平均， 这个变量的初始值为 0 。 注意这里手动指定 了变盘的\n",
     "# 类型为 tf.float32 ， 因为所有需要计算 滑动平均的变量必须是实数型。\n",
-    "vl = tf.Variable(0, dtype=tf.float32) \n",
-    "# 这里 step 变量模拟神经网络中迭代的轮数 ，可以用于动态控制衰减率 。 \n",
+    "v1 = tf.Variable(0, dtype=tf.float32) \n",
+    "# 这里 step 变量模拟神经网络中迭代的轮数，可以用于动态控制衰减率 。 \n",
     "step = tf.Variable(0, trainable=False)\n",
     "\n",
-    "# 定义一个滑动平均的类,初始化时给定了衰减率0.99, 和控制衰减率的 变量step\n",
+    "# 定义一个滑动平均的类,初始化时给定了衰减率0.99, 和控制衰减率的变量step\n",
     "ema = tf.train.ExponentialMovingAverage(0.99, step)\n",
     "\n",
     "# 定义一个更新变量滑动平均的操作, 这里需要给定一个列表,每次执行这个操作时这个列表中的变量都会被更新\n",
-    "maintain_averages_op = ema.apply([vl])\n",
+    "maintain_averages_op = ema.apply([v1])\n",
     "\n",
     "with tf.Session() as sess:\n",
     "    # 初始化所有变量 。\n",
-    "    init_op= tf.global_variables_initializer()\n",
+    "    init_op = tf.global_variables_initializer()\n",
     "    sess.run(init_op)\n",
-    "    # 通过 ema.average(vl)获取滑动平均之后变量的取值,在初始化之后变量v1的值和v1的滑动平均都是0\n",
-    "    pring sess.run([v1, ema.average(v1)])\n",
+    "    # 通过 ema.average(vl)获取滑动平均之后变量的取值,在初始化之后变量v1的值和v1的滑动平均都是0, 输出[0.0, 0.0]\n",
+    "    sess.run([v1, ema.average(v1)])\n",
     "    # 更新v1的值到5\n",
-    "    sess.run(tf.assign(vl,5))\n",
-    "    # 更新 vl的滑动平均值。 衰减率为 m工n{0 . 99 , (l+step)/(lO+ step)=0 . 1)=0 . l\n",
-    "    # 所以 vl 的滑动平均会被更 新为 0.1 × 0+0 . 9× 5=4 . 5 。\n",
+    "    sess.run(tf.assign(v1,5))\n",
+    "    # 更新 vl的滑动平均值。 衰减率为 min{0.99, (l+step)/(lO+step)=0.1)=0.l\n",
+    "    # 所以 vl 的滑动平均会被更 新为 0.1×0+0.9×5=4.5 。\n",
     "    sess.run(maintain_averages_op)\n",
     "    print sess.run([v1, ema.average(v1)])\n",
     "    \n",
@@ -49,11 +59,239 @@
     "    # 输出［ 10 . 0 , 4 . 5549998]\n",
     "    # 再次更新滑动平 均值， 得到的新滑动平均 值为 0.99× 4.555+0 . 0lxl0=4 . 60945\n",
     "    sess.run(maintain_averages_op)\n",
-    "    print sess.run([vl, ema.average(vl)])\n",
+    "    print sess.run([v1, ema.average(v1)])\n",
     "    # 输出［ 10.0 , 4.6094499]\n",
     "    \n",
     "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1π = 3.14\n",
+      "2π = 6.28\n",
+      "3π = 9.42\n",
+      "4π = 12.56\n",
+      "5π = 15.7\n",
+      "6π = 18.84\n",
+      "7π = 21.98\n",
+      "8π = 25.12\n",
+      "9π = 28.26\n",
+      "10π = 31.4\n",
+      "11π = 34.54\n",
+      "12π = 37.68\n",
+      "13π = 40.82\n",
+      "14π = 43.96\n",
+      "15π = 47.1\n",
+      "16π = 50.24\n",
+      "17π = 53.38\n",
+      "18π = 56.52\n",
+      "19π = 59.66\n",
+      "20π = 62.8\n",
+      "21π = 65.94\n",
+      "22π = 69.08\n",
+      "23π = 72.22\n",
+      "24π = 75.36\n",
+      "25π = 78.5\n",
+      "26π = 81.64\n",
+      "27π = 84.78\n",
+      "28π = 87.92\n",
+      "29π = 91.06\n",
+      "30π = 94.2\n",
+      "31π = 97.34\n",
+      "32π = 100.48\n",
+      "33π = 103.62\n",
+      "34π = 106.76\n",
+      "35π = 109.9\n",
+      "36π = 113.04\n",
+      "37π = 116.18\n",
+      "38π = 119.32\n",
+      "39π = 122.46\n",
+      "40π = 125.6\n",
+      "41π = 128.74\n",
+      "42π = 131.88\n",
+      "43π = 135.02\n",
+      "44π = 138.16\n",
+      "45π = 141.3\n",
+      "46π = 144.44\n",
+      "47π = 147.58\n",
+      "48π = 150.72\n",
+      "49π = 153.86\n",
+      "50π = 157.0\n",
+      "51π = 160.14\n",
+      "52π = 163.28\n",
+      "53π = 166.42\n",
+      "54π = 169.56\n",
+      "55π = 172.7\n",
+      "56π = 175.84\n",
+      "57π = 178.98\n",
+      "58π = 182.12\n",
+      "59π = 185.26\n",
+      "60π = 188.4\n",
+      "61π = 191.54\n",
+      "62π = 194.68\n",
+      "63π = 197.82\n",
+      "64π = 200.96\n",
+      "65π = 204.1\n",
+      "66π = 207.24\n",
+      "67π = 210.38\n",
+      "68π = 213.52\n",
+      "69π = 216.66\n",
+      "70π = 219.8\n",
+      "71π = 222.94\n",
+      "72π = 226.08\n",
+      "73π = 229.22\n",
+      "74π = 232.36\n",
+      "75π = 235.5\n",
+      "76π = 238.64\n",
+      "77π = 241.78\n",
+      "78π = 244.92\n",
+      "79π = 248.06\n",
+      "80π = 251.2\n",
+      "81π = 254.34\n",
+      "82π = 257.48\n",
+      "83π = 260.62\n",
+      "84π = 263.76\n",
+      "85π = 266.9\n",
+      "86π = 270.04\n",
+      "87π = 273.18\n",
+      "88π = 276.32\n",
+      "89π = 279.46\n",
+      "90π = 282.6\n",
+      "91π = 285.74\n",
+      "92π = 288.88\n",
+      "93π = 292.02\n",
+      "94π = 295.16\n",
+      "95π = 298.3\n",
+      "96π = 301.44\n",
+      "97π = 304.58\n",
+      "98π = 307.72\n",
+      "99π = 310.86\n",
+      "100π = 314.0\n",
+      "101π = 317.14\n",
+      "102π = 320.28\n",
+      "103π = 323.42\n",
+      "104π = 326.56\n",
+      "105π = 329.7\n",
+      "106π = 332.84\n",
+      "107π = 335.98\n",
+      "108π = 339.12\n",
+      "109π = 342.26\n",
+      "110π = 345.4\n",
+      "111π = 348.54\n",
+      "112π = 351.68\n",
+      "113π = 354.82\n",
+      "114π = 357.96\n",
+      "115π = 361.1\n",
+      "116π = 364.24\n",
+      "117π = 367.38\n",
+      "118π = 370.52\n",
+      "119π = 373.66\n",
+      "120π = 376.8\n",
+      "121π = 379.94\n",
+      "122π = 383.08\n",
+      "123π = 386.22\n",
+      "124π = 389.36\n",
+      "125π = 392.5\n",
+      "126π = 395.64\n",
+      "127π = 398.78\n",
+      "128π = 401.92\n",
+      "129π = 405.06\n",
+      "130π = 408.2\n",
+      "131π = 411.34\n",
+      "132π = 414.48\n",
+      "133π = 417.62\n",
+      "134π = 420.76\n",
+      "135π = 423.9\n",
+      "136π = 427.04\n",
+      "137π = 430.18\n",
+      "138π = 433.32\n",
+      "139π = 436.46\n",
+      "140π = 439.6\n",
+      "141π = 442.74\n",
+      "142π = 445.88\n",
+      "143π = 449.02\n",
+      "144π = 452.16\n",
+      "145π = 455.3\n",
+      "146π = 458.44\n",
+      "147π = 461.58\n",
+      "148π = 464.72\n",
+      "149π = 467.86\n",
+      "150π = 471.0\n",
+      "151π = 474.14\n",
+      "152π = 477.28\n",
+      "153π = 480.42\n",
+      "154π = 483.56\n",
+      "155π = 486.7\n",
+      "156π = 489.84\n",
+      "157π = 492.98\n",
+      "158π = 496.12\n",
+      "159π = 499.26\n",
+      "160π = 502.4\n",
+      "161π = 505.54\n",
+      "162π = 508.68\n",
+      "163π = 511.82\n",
+      "164π = 514.96\n",
+      "165π = 518.1\n",
+      "166π = 521.24\n",
+      "167π = 524.38\n",
+      "168π = 527.52\n",
+      "169π = 530.66\n",
+      "170π = 533.8\n",
+      "171π = 536.94\n",
+      "172π = 540.08\n",
+      "173π = 543.22\n",
+      "174π = 546.36\n",
+      "175π = 549.5\n",
+      "176π = 552.64\n",
+      "177π = 555.78\n",
+      "178π = 558.92\n",
+      "179π = 562.06\n",
+      "180π = 565.2\n",
+      "181π = 568.34\n",
+      "182π = 571.48\n",
+      "183π = 574.62\n",
+      "184π = 577.76\n",
+      "185π = 580.9\n",
+      "186π = 584.04\n",
+      "187π = 587.18\n",
+      "188π = 590.32\n",
+      "189π = 593.46\n",
+      "190π = 596.6\n",
+      "191π = 599.74\n",
+      "192π = 602.88\n",
+      "193π = 606.02\n",
+      "194π = 609.16\n",
+      "195π = 612.3\n",
+      "196π = 615.44\n",
+      "197π = 618.58\n",
+      "198π = 621.72\n",
+      "199π = 624.86\n",
+      "200π = 628.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "pi = 3.14\n",
+    "\n",
+    "for i in range(1,201):\n",
+    "    print \"%sπ = %s\" % (i, i * pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
