--- a/test.ipynb
+++ b/test.ipynb
@@ -2,14 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
-    "from numpy.random import RandomState"
+    "from numpy.random import RandomState\n",
+    "import numpy as np\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "[1 2 1 2]\n",
+      "[1 2 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# argmax返回的是最大数的索引\n",
+    "a = np.array([3, 5, 2, 5, 5, 1])\n",
+    "print(np.argmax(a))\n",
+    "\n",
+    "a = np.array([[1, 5, 5, 2],\n",
+    "              [9, 6, 12, 8],\n",
+    "              [3, 7, 9, 10]])\n",
+    "print(np.argmax(a, axis=0))\n",
+    "print(np.argmax(a, axis=1))"
    ]
   },
   {
